samples/_failures_safe/1761610870_b97707_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83b0faac.c: In function ‘main’:
./samples/SAFE/__tmp_83b0faac.c:161:17: error: expected expression at end of input
  161 |                 if (status == 1)
      |                 ^~
./samples/SAFE/__tmp_83b0faac.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83b0faac.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83b0faac.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83b0faac.c:161:17: error: expected declaration or statement at end of input
